--- a/app/views/user_mailer/register.html.erb
+++ b/app/views/user_mailer/register.html.erb
@@ -6,3 +6,17 @@ Hi <%= @user_email %>
         Confirm my account
     </a>
 </p>
+<p>
+Once registered, you can create an event and invite other users.</p>
+<p>
+To create an event, you need to put a date, a starting point and an end point.
+</p>
+<p>
+You can invit  and select several participants, and even send a picture
+to help people to localize a place.
+</p>
+<p>
+When you save the event, the members will receive an invitation by email.
+</p>
+
+<p>Enjoy your ride!</p>
