--- a/app/views/event_mailer/demand.html.erb
+++ b/app/views/event_mailer/demand.html.erb
@@ -1,9 +1,9 @@
 <p>Hi <%= @owner %></p>
 
 
-<p>I would be interested to joint the event you orgainzed:</p>
+<p>I am interested to joint the event you organise:</p>
 <p>Date: <%= @itinary.date%></p>
 <p>From: <%= @itinary.start%></p>
 <p>To: <%= @itinary.end%></p>
 
-<p>You can email me at: <%= mail_to @user%></p>
+<p>You can email me at: <%= mail_to @user%> or update with this = > <a href=<%="http://localhost:3001/api/v1/confirmDemand?name=#{@owner}&ptoken=#{@token}&user=#{@user}"%>>link</a> < = </p>
