--- a/app/views/event_mailer/invitation.html.erb
+++ b/app/views/event_mailer/invitation.html.erb
@@ -32,6 +32,8 @@ to help people to localize a place.
 <p>
 When you save the event, the members will receive an invitation by email.
 </p>
-
+<br/>
 <p>Enjoy your ride!</p>
+<p>Cheers</p>
+<a href="https://godownwind.online">go downwind!</a>
 
