--- a/app/views/user_mailer/register.html.erb
+++ b/app/views/user_mailer/register.html.erb
@@ -19,4 +19,5 @@ to help people to localize a place.
 When you save the event, the members will receive an invitation by email.
 </p>
 
-<p>Enjoy your ride!</p>
+<p>Cheers</p>
+<a href="https://godownwind.online">go downwind!</a>
