--- a/app/views/event_mailer/invitation.html.erb
+++ b/app/views/event_mailer/invitation.html.erb
@@ -35,5 +35,5 @@ When you save the event, the members will receive an invitation by email.
 <br/>
 <p>Enjoy your ride!</p>
 <p>Cheers</p>
-<a href="https://godownwind.online">go downwind!</a>
+<a href="http://www.godownwind.online">go downwind!</a>
 
